examples/core/errors/type_errors/13_field_not_found.output.txt
error[E0110]: Field not found
  ┌─ input:5:19
2 │ // Similar to RcdMissingFields but occurs in a different context
3 │ // This error happens when a function expects a record with certain fields
4 │ // Example: function requires field 'x' but provided record only has 'y'
5 │ %let get_x = r -> r.x in
                      ^
6 │ get_x({y: 2})
7 │ 
  = note: Field `x` not found
  = note: Available fields: y
  = hint: Check the field name for typos
  = hint: Use one of the available fields listed above
  = hint: Add the field to the record definition if needed